--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,10 @@ default: &default
 development:
   <<: *default
   database: todo_app_development
+  host: localhost
+  port: 5432
+  username: root
+  password: toor
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +62,10 @@ development:
 test:
   <<: *default
   database: todo_app_test
+  host: localhost
+  port: 5432
+  username: root
+  password: toor
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
